FlashDeck-T6/examples/invalid/semantic_too_few_cards.fdeck
deck "Deck Trivial" {
    description: "Possui somente um card.";
    tags: [teste];
    categories: [erros];

    card unico {
        front: "Pergunta única";
        back: "Resposta única";
        tags: [teste];
        category: erros;
        difficulty: 1;
    }
}
